client/one/less/style.less
/* ... */
.breadcrumb {
    display: inline-block;
    background-color: transparent;
    padding: 0px;
    margin: 0px;

    & > li+li:before {
        content: ">";
        font-size: 15px;
        font-weight: normal;
        color: white;
    }

    & > li a,
    & > li span {
        font-size: 15px;
        font-weight: normal;
        color: white;

        &.active {
            font-size: 15px;
            font-weight: normal;
            color: white;
            font-weight: bold;
        }
    }
}

.select2-choice,
.select2-container-active .select2-choice,
.select2-container-active .select2-choices {
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
}

.select2-chosen {
    color: #454545;
}


.graph-infobox-parent {
    display: inline-block;
    width: 100%;
    position: relative;
    overflow: hidden;
}

.graph-container-short {
    display: inline-block;
    width: 70%;
}

.infobox-container-full {
    display: inline-block;
    width: 30%;
    position: absolute;
    height: 100%;
    overflow: auto;
    display: visible;
    background: #f6f6f6;
}

.infobox-container-short {
    display: none;
}

.infobox-button {
    margin-right: 5px;
}

.infobox-background {
    background: #f6f6f6;
}

.infobox {
    padding: 8px;

    color: @infobox-black;
}

.infobox-active-circle-icon-gray {
    .state-icon-placeholder();
    background-image: url('img/active_circle_icon_gray.svg');
}

.infobox-status {
    text-align:right;
    display: inline-block;
    min-width: 20px;
    vertical-align: top;
    margin-top: 7px;
    margin-left: 0px;
}

.infobox-header {
    display: block;
    width: 100%;
    white-space: nowrap;
    overflow: visible;
}

.infobox-header-settings-button {
	display:inline-block;
	margin-right: 5px;
    position: absolute;
    right: 0;
}

.infobox-title {
    color: @infobox-black;
    font-size: 18px;
    font-weight: 600;
}

.infobox-icon {
    width: 10px;
    height: 10px;
    margin-right: 4px;
}

.infobox-subtitle {
    color: @infobox-black;
    font-size: 13px;
    font-weight: 600;
}

.infobox-setting-label {
    width: 140px;
    max-width: 120px;
    overflow: hidden;
    display: inline-block;
    color: @infobox-gray;
    float: left;
}

.infobox-setting-value {
    display: inline;
    vertical-align: top;
    color: #454545;
    font-weight: normal;
}

.infobox-setting-value-comment {
    display: inline;
    vertical-align: top;
    color: @infobox-gray;
}

.infobox-setting-icon {
    display: inline-block;
    vertical-align: top;
}

.infobox-details-link {
    cursor: pointer;
}

.infobox-setting-info {
    display: inline-block;
    vertical-align: top;
}

.infobox-setting-info-dropped {
    display: block;
}

.infobox-setting-info-dropped-content {
    background: white;
    margin: 5px;
    border: 1px solid @infobox-gray;
}

.chart-hidden {
    display: none;
}

.table-name-hidden {
    display: none;
}

.chart-container {
    position: relative;
    .no-data {
        position: absolute;
        left: 0px;
        right: 0px;
        top: 138px;
        z-index: 2;
        text-align: center;
        color: #2fa8c7;
        font-size: 20px;
        vertical-align: middle;

        span {
            background-color: #fff;
        }
    }

    .chart {
        height: 250px;
        margin-top: 5px;
        margin-bottom: 5px;
    }

    .chart-selector {
        display: inline-block;
        margin-bottom: 10px;

        .select2-container {
            width: 12em;

            &.metric1 {
                margin-right: 0.8em;
            }

            &.metric2 {
                margin-left: 0.5em;

                .select2-choice {
                    border: 1px solid @default-color;
                }
            }
        }

        .middle-text {
            font-size: 13px;
            line-height: 32px;
            vertical-align: bottom;
        }
    }

    .chart-legend {
        display: inline-block;
        vertical-align: text-top;
        padding: 0;
        margin: 0;

        li {
            display: inline-block;
            margin-left: 20px;
            cursor: default;
            margin-bottom: 10px;

            div {
                display: inline-block;
            }

            .legend-item {
                .border-radius(2px);

                .btn-remove {
                    cursor: pointer;
                    width: 15px;
                    margin-left: 3px;
                    text-align: center;

                    img {
                        width: 9px;
                    }

                    &.disabled {
                        cursor: default;

                        img {
                            display: none;
                        }
                    }
                }

                .text {
                    .border-right-radius(1px);
                    background-color: orange;
                    padding: 2px 5px;
                    text-transform: uppercase;
                    font-size: 12px;
                    font-weight: 600;
                }
            }
        }
    }
}

.highcharts-tooltip>span {
    font-family: @default-font-family !important;

    .tooltip-header {
        padding-bottom: 10px;
        font-weight: bold;
        text-align: center;
    }

    .color-box {
        width: 8px;
        height: 8px;
        display: inline-block;
        margin-right: 2px;
        .border-radius(2px);
    }
}
/* ... */

